# rkllm-server

./: .gitignore  CMakeLists.txt  LICENSE  README.md  build.sh
docs/: ADAPTIVE_RECOVERY.md
examples/prompts/: README.md  customer_support.txt  e_commerce_order.txt  vidracaria.txt
src/: main.cpp
systemd/: rkllm-server.service.example
